safari profile page svg map alignment fix

--- a/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
@@ -1183,7 +1183,8 @@ h3.page-title {
 }
 .page-profile-container .map-container svg{
 	position: absolute;
-    top: 0;
+	top: 0;
+	left:0;
 	opacity: 1;
 	fill:transparent;
 }
